--- a/style.css
+++ b/style.css
@@ -139,9 +139,21 @@
 .implements-text{
     width: auto;
     height: auto;
-    background-color: gray;
+    border: 0.5px solid rgba(255, 230, 128,0.5);
+    background-color: rgba(254,247,220 , 0.4);
     position: relative;
 }
+
+.implements-text h3{
+    width: 70%;
+    z-index: 1;
+    margin: 30px 0 30px 30px ;
+}
+
+.implements-text h3:nth-child(3){
+    margin-bottom: 20%;
+}
+
 
 .corner{
     position: absolute;
@@ -150,23 +162,23 @@
     bottom: 0;
 }
 
-.implements-content {
-    position: relative;
-}
-
-.implements-heading{
-    
-}
-
 .cloud{
-
+    z-index: 0;
     position: absolute;
-    /* margin-top: 50px !important; */
-    /* margin-bottom: 50px; */
+    right: 0px;
+    bottom: 0;
 }
 
+.liens{
+    height: 150px;
+    align-self: center;
+}
 
-
+@media only screen and (max-width:1100px){
+    .liens{
+        display: none;
+    }
+}
 
 
 
