--- a/style.css
+++ b/style.css
@@ -1,14 +1,16 @@
 /* styling of header section  */
 *{
-    line-height: 65px;
-    font-family: SolomonSansSemiBold,sans-serif;
-    /* background-color: rgba(184, 183, 183, 0.1); */
+    /* font-family: SolomonSansSemiBold,sans-serif; */
 }
 :root{
-    --pink:rgb(255, 0, 52);   
+    --pink:#ff0034;   
 }
 .main{
     padding-top: 20px ;
+}
+
+.one-box{
+    padding-top: 5%;
 }
 
 .section-margin{
@@ -17,11 +19,15 @@
 }
 
 .head-logo{
-    margin-left: 9%;
+    margin-left: 10%;
+}
+
+.logo-text{
+    font-size: 16px;
 }
 
 .head-bg-img{
-    background-image: url(./images/headerBG.png);
+    background-image: url(./images/headerBG-min.png);
     background-repeat: no-repeat;
     background-size: cover;
 
@@ -33,17 +39,17 @@
     text-align: center;
     position: relative;
     margin: auto;
-    padding-top: 6%;
-    font-size: 52px;
+    padding-top: 10%;
+    font-size: 44px;
+    font-weight: bold;
     color: #000;
     bottom: 0;
 }
 
 .two-box{
     position: relative;
-    padding-top: 65px;
+    padding-top: 155px;
     left: -65px;
-    /* padding-left: -10px; */
 }
 
 .button{
@@ -58,6 +64,12 @@
 
 .icons{
     font-size: 25px;
+}
+.icons i , .icons img{
+    margin: 0 20px 0 20px;
+}
+.icons img{
+    margin-top: 8px;
 }
 
 @media only screen and (max-width:600px){
@@ -114,44 +126,28 @@
 
 
 
-
-
-/* .info{
-    background-color: rgb(128, 128, 128);
-    padding-top: 30px;
-    padding-left: 68px;
-    height: 431px;
-    width: auto;
-    position: absolute;
-}
-
-.info div h3{
-    width: 60%;
-    height: 18vh;
-}
-
-.clouds{
-    position: relative;
-    top: -100px;
-} */
-
-
 .implements-text{
     width: auto;
     height: auto;
-    border: 0.5px solid rgba(255, 230, 128,0.5);
-    background-color: rgba(254,247,220 , 0.4);
+    border: 0.5px solid rgba(255, 230, 128,0.3);
+    background-color: rgba(254,247,220 , 0.2);
     position: relative;
 }
 
-.implements-text h3{
-    width: 70%;
-    z-index: 1;
-    margin: 30px 0 30px 30px ;
+.implements-text div{
+    width: 60%;
+    z-index: 100;
+    position: relative;
+    line-height: 30px;
+    margin: 40px 0 0px 0px ;
+    padding-left: 50px;
+    font-size: 26px;
+    font-weight: 600;
 }
 
-.implements-text h3:nth-child(3){
-    margin-bottom: 20%;
+
+.implements-text div:nth-child(3){
+    margin-bottom: 10%;
 }
 
 
@@ -188,7 +184,6 @@
 
 .tool img{
     margin: 50px 0 50px 0;
-    /* line-height: 300px; */
 }
 
 .clients{
@@ -233,6 +228,13 @@
 @media only screen and (max-width:770px){
     .company-logo{
         width: 50%;
+    }
+    .implements-text div{
+        width: 100%;
+        text-align: center;
+        font-size: 18px;
+        margin: 5px 0 30px 0 !important;
+        padding: 5px !important;
     }
 }
 
@@ -281,9 +283,7 @@
 }
 
 @media only screen and (max-width:570px){
-    .icons-footer{
-        position: none !important;
-    }
+    
     .footer-sections{
         height: 950px;
     }
@@ -302,4 +302,7 @@
 .fingers{
     margin-top: -8px;
     height: 20px;
+}
+.icons-footer img{
+    margin-top: 15px;
 }
