--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@
 
 .button:hover{
     background-color: var(--yellow);
-    box-shadow: 1px 4px 25px rgba(255, 247, 0, 0.5);
+    box-shadow: 1px 4px 25px #326ce5;
     color: black;
     transform: scale(1.1);
 }
@@ -102,6 +102,7 @@
 }
 
 .card-bg{
+    color : white ;
     background-color: rgba(255, 255, 0, 0.414);
 }
 
@@ -361,7 +362,7 @@
 }
 
 .button-footer:hover{
-    box-shadow: 1px 4px 25px rgba(255, 0, 52 , 0.4);
+    box-shadow: 1px 4px 25px #326ce5;
     background-color: rgb(255, 0, 52);
     color: white;
     transform: scale(1.1);
