--- a/style.css
+++ b/style.css
@@ -205,7 +205,7 @@
 }
 
 .company-logo{
-    width: 25%;
+    width: 16.6%;
 }
 .company-logo img{
     margin: 50px 0;
@@ -223,6 +223,9 @@
 
 @media only screen and (max-width:850px){
     .tool{
+        width: 25%;
+    }
+    .company-logo{
         width: 25%;
     }
 }
